# mentat-code-mini

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: ai_code_review.yml  release.yml
llmdoc/: index.md
llmdoc/architecture/: system-overview.md
llmdoc/guides/: doc-standard.md
llmdoc/reference/: constitution.md  data-models.md  shared-utilities.md  tech-stack.md
npm-package/: .npmignore  checksums.json  install.js  package-lock.json  package.json  run.js
plans/: security-fixes-plan.md
src/: config.rs  main.rs
src/tools/: mod.rs  path_validator.rs  read_file.rs  write_file.rs
src/util/: read_file.rs
