[package]
name = "mentat-code"
version = "0.1.0"
edition = "2021"
description = "Your AI Coding Agent - A Rust-powered CLI tool"
authors = ["Sruimeng"]
license = "MIT"
repository = "https://github.com/Sruimeng/mentat-code-mini"

[[bin]]
name = "mentat-code-mini"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustyline = "15.0"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
